--- a/package.json
+++ b/package.json
@@ -2,20 +2,37 @@
   "name": "css-minimizer-webpack-plugin",
   "version": "7.0.2",
   "description": "CSS minimizer (minifier) plugin for Webpack",
-  "license": "MIT",
-  "repository": "webpack-contrib/css-minimizer-webpack-plugin",
-  "author": "Loann Neveu",
+  "keywords": [
+    "cssnano",
+    "css",
+    "csso",
+    "clean-css",
+    "swc",
+    "esbuild",
+    "webpack",
+    "webpack-plugin",
+    "minimize",
+    "minimizer",
+    "minify",
+    "minifier",
+    "optimize",
+    "optimizer"
+  ],
   "homepage": "https://github.com/webpack-contrib/css-minimizer-webpack-plugin",
   "bugs": "https://github.com/webpack-contrib/css-minimizer-webpack-plugin/issues",
+  "repository": "webpack-contrib/css-minimizer-webpack-plugin",
   "funding": {
     "type": "opencollective",
     "url": "https://opencollective.com/webpack"
   },
+  "license": "MIT",
+  "author": "Loann Neveu",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
-  "engines": {
-    "node": ">= 18.12.0"
-  },
+  "files": [
+    "dist",
+    "types"
+  ],
   "scripts": {
     "start": "npm run build -- -w",
     "clean": "del-cli dist",
@@ -26,13 +43,13 @@
     "commitlint": "commitlint --from=master",
     "security": "npm audit",
     "lint:prettier": "prettier --cache --list-different .",
-    "lint:js": "eslint --cache .",
+    "lint:code": "eslint --cache .",
     "lint:spelling": "cspell --cache --no-must-find-files --quiet \"**/*.*\"",
     "lint:types": "tsc --pretty --noEmit",
     "lint": "npm-run-all -l -p \"lint:**\"",
-    "fix:js": "npm run lint:js -- --fix",
+    "fix:code": "npm run lint:code -- --fix",
     "fix:prettier": "npm run lint:prettier -- --write",
-    "fix": "npm-run-all -l fix:js fix:prettier",
+    "fix": "npm-run-all -l fix:code fix:prettier",
     "test:only": "cross-env NODE_ENV=test NODE_OPTIONS=\"--experimental-vm-modules\" jest",
     "test:watch": "npm run test:only -- --watch",
     "test:coverage": "npm run test:only -- --collectCoverageFrom=\"src/**/*.js\" --coverage",
@@ -41,10 +58,65 @@
     "prepare": "husky && npm run build",
     "release": "standard-version"
   },
-  "files": [
-    "dist",
-    "types"
-  ],
+  "dependencies": {
+    "@jridgewell/trace-mapping": "^0.3.25",
+    "cssnano": "^7.0.4",
+    "jest-worker": "^30.0.5",
+    "postcss": "^8.4.40",
+    "schema-utils": "^4.2.0",
+    "serialize-javascript": "^6.0.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@eslint/js": "^9.32.0",
+    "@eslint/markdown": "^7.0.0",
+    "@parcel/css": "^1.8.3",
+    "@stylistic/eslint-plugin": "^5.2.2",
+    "@swc/css": "^0.0.28",
+    "@types/clean-css": "^4.2.11",
+    "@types/csso": "^5.0.4",
+    "@types/node": "^20.14.9",
+    "@types/serialize-javascript": "^5.0.4",
+    "babel-jest": "^30.0.5",
+    "clean-css": "^5.3.3",
+    "copy-webpack-plugin": "^13.0.0",
+    "cross-env": "^7.0.3",
+    "cspell": "^8.13.1",
+    "css-loader": "^6.10.0",
+    "cssnano-preset-simple": "^4.0.0",
+    "csso": "^5.0.3",
+    "del": "^6.1.0",
+    "del-cli": "^5.1.0",
+    "esbuild": "^0.25.0",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-config-webpack": "^4.4.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-jsdoc": "^52.0.0",
+    "eslint-plugin-n": "^17.21.0",
+    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-unicorn": "^60.0.0",
+    "globals": "^16.3.0",
+    "husky": "^9.1.4",
+    "jest": "^30.0.5",
+    "lightningcss": "^1.25.1",
+    "lint-staged": "^15.2.8",
+    "memfs": "^4.11.1",
+    "mini-css-extract-plugin": "^2.9.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.6.2",
+    "sass": "^1.77.8",
+    "sass-loader": "^16.0.5",
+    "standard-version": "^9.5.0",
+    "sugarss": "^5.0.0",
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0"
+  },
   "peerDependencies": {
     "webpack": "^5.0.0"
   },
@@ -68,70 +140,7 @@
       "optional": true
     }
   },
-  "dependencies": {
-    "@jridgewell/trace-mapping": "^0.3.25",
-    "cssnano": "^7.0.4",
-    "jest-worker": "^30.0.5",
-    "postcss": "^8.4.40",
-    "schema-utils": "^4.2.0",
-    "serialize-javascript": "^6.0.2"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.24.8",
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@parcel/css": "^1.8.3",
-    "@swc/css": "^0.0.28",
-    "@types/clean-css": "^4.2.11",
-    "@types/csso": "^5.0.4",
-    "@types/node": "^20.14.9",
-    "@types/serialize-javascript": "^5.0.4",
-    "@webpack-contrib/eslint-config-webpack": "^3.0.0",
-    "babel-jest": "^30.0.5",
-    "clean-css": "^5.3.3",
-    "copy-webpack-plugin": "^9.1.0",
-    "cross-env": "^7.0.3",
-    "cspell": "^8.13.1",
-    "css-loader": "^6.10.0",
-    "cssnano-preset-simple": "^4.0.0",
-    "csso": "^5.0.3",
-    "del": "^6.1.0",
-    "del-cli": "^5.1.0",
-    "esbuild": "^0.25.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "husky": "^9.1.4",
-    "jest": "^30.0.5",
-    "lightningcss": "^1.25.1",
-    "lint-staged": "^15.2.8",
-    "memfs": "^4.11.1",
-    "mini-css-extract-plugin": "^2.9.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.3.3",
-    "sass": "^1.77.8",
-    "sass-loader": "^16.0.5",
-    "standard-version": "^9.5.0",
-    "sugarss": "^4.0.1",
-    "typescript": "^5.5.4",
-    "webpack": "^5.93.0"
-  },
-  "keywords": [
-    "cssnano",
-    "css",
-    "csso",
-    "clean-css",
-    "swc",
-    "esbuild",
-    "webpack",
-    "webpack-plugin",
-    "minimize",
-    "minimizer",
-    "minify",
-    "minifier",
-    "optimize",
-    "optimizer"
-  ]
+  "engines": {
+    "node": ">= 18.12.0"
+  }
 }
